# phylax

./: Cargo.toml  PKGBUILD  README.md
.github/workflows/: aur-publish.yml  release.yml
examples/: catppuccin-mocha.css
src/: config.rs  dbus.rs  main.rs  ui.rs
