[package]
name = "phylax"
version = "0.1.0"
authors = ["Jake Grant"]
edition = "2024"
rust-version = "1.85"
description = "Phylax is a Polkit authentication agent written in GTK"
readme = "README.md"
repository = "https://github.com/jakeb-grant/phylax"
license = "Apache-2.0"

[dependencies]
etc-passwd = "0.2.0"
eyre = "0.6.12"
figment = { version = "0.10.18", features = ["toml"] }
gtk4 = { version = "0.9.6", features = ["v4_10"] }
relm4 = "0.9.1"
serde = { version = "1.0.201", features = ["serde_derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "std",
  "fmt",
  "env-filter",
  "ansi",
] }
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
